feat: implement controller for add, update, getAll, getByName Gudang